# cxxtract2

./: .env.example  .gitignore  1st_review.md  API_EXAMPLES.md  CHANGELOG.md  PLAN.md  PLAN2.md  config.example.yaml  pyproject.toml  workspace.example.yaml
cpp-extractor/: CMakeLists.txt  build.ps1
cpp-extractor/src/: extractor.cpp  extractor.h  main.cpp
integrations/function_schemas/: README.md  components.common.json  descriptions.md  functions.catalog.json  openapi.tools.yaml
integrations/mcp_server/: README.md  __init__.py  http_client.py  schema_components.json  server.py  tool_registry.py  tools.catalog.json
output/.cxxtract/compdb_cache/rtc_apps/project_cloud/: compile_commands.2cbee03406b0c093.rewritten.json
scripts/: api_smoke_test.py  generate_agent_artifacts.py  validate_agent_artifacts.py
src/cxxtract/: __init__.py  config.py  main.py  models.py
src/cxxtract/api/: routes.py
src/cxxtract/cache/: db.py  hasher.py  repository.py  repository_core.py  repository_metrics.py
src/cxxtract/orchestrator/: compile_db.py  engine.py  parser.py  recall.py  rg_env.py  sync_worker.py  vec_env.py  workspace.py  writer.py
src/cxxtract/orchestrator/services/: candidate_service.py  commit_summary_service.py  confidence_service.py  exploration_service.py  freshness_service.py  git_sync_service.py  query_read_service.py  workspace_context_service.py
src/cxxtract/schema/: migrations.sql
tests/: conftest.py  test_agent_artifacts.py  test_api.py  test_cache.py  test_compile_db.py  test_config.py  test_cpp_extractor_precision.py  test_engine.py  test_freshness_service.py  test_parser.py  test_rg.py  test_vec_env.py  test_workspace_context_service.py  test_workspace_manifest.py
