[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cxxtract"
version = "0.1.0"
description = "Lazy-evaluated C++ code semantic understanding service for AI Code Review"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cxxtract"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
